tests/agl/rejections/type/inference_bottom_without_context.agl
exception Stop extends Exception
  code: int

def id[T](x: T) -> T = x
id(raise Stop(message = "stop", code = 0))
